# fft

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build_cmake.yml
cmake/: FindMKL.cmake  FindSSE.cmake  Findgtest.cmake  common.cmake
projects/AFSap/: CMakeLists.txt  main.cpp
projects/Benchmark/: CMakeLists.txt  main.cpp
projects/Benchmark/micro/: ApplyOperationVectorizedBench.cpp  ConvVectorizedBench.cpp  CorrVectorizedBench.cpp  SummVectorizedBench.cpp  Utils.h
projects/Core/: CMakeLists.txt  GridUtils.h  IdxUtils.h  IdxUtils.inl  MakeWithCapacity.h  MakeWithCapacity.inl  MakeWithCapactiy.h  MakeWithCapactiy.inl  MoveAndClear.h  MoveAndClear.inl  MoveOnly.h  MoveOnly.inl  TimeGuard.h  Types.h
projects/Core/MKL/: Utils.h  Utils.inl
projects/Core/MKL/src/: Utils.cpp
projects/Core/src/: TimeGuard.cpp
projects/Core/test/: ConvTest.cpp  IdxUtilsTest.cpp  conv_test.cpp
projects/Luna/: CMakeLists.txt  Scheme.fa  SchemeBindings.h
projects/Luna/src/: SchemeBindings.cpp
projects/Scheme/: CMakeLists.txt  Scheme.h
projects/Scheme/src/: IdxUtils.h  IdxUtils.inl  IdxUtilsAVX.inl  OpenMP.h  Scheme.cpp
projects/Scheme/test/: IdxUtilsTest.cpp
projects/TestApp/: CMakeLists.txt  main.cpp
projects/fft_test/: CMakeLists.txt  main.cpp
scripts/: luna-compile-and-run.sh  mkl-download-ubuntu.sh  run-sscc.sh  run_sscc_12.sh  run_sscc_16.sh  run_sscc_4.sh  run_sscc_8.sh
tex/: main.tex
tex/inc/: 0-annotation.tex  0-bibliography.tex  0-conclusion.tex  0-intro.tex  0-title.tex  1-spec.tex  2-prog.tex  3-comp.tex  a-app.tex  presets.tex
